--- a/app/src/main/res/layout/main2.xml
+++ b/app/src/main/res/layout/main2.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.kengdie.androidstudy.MainActivity">
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,4 +35,4 @@
         android:layout_marginTop="32dp"
         android:id="@+id/editText" />
 
-</RelativeLayout>
+</LinearLayout>
